<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <!-- This module was also published with a richer model, Gradle metadata,  -->
  <!-- which should be used instead. Do not delete the following line which  -->
  <!-- is to indicate to Gradle or any Gradle module metadata file consumer  -->
  <!-- that they should prefer consuming it instead. -->
  <!-- do_not_remove: published-with-gradle-metadata -->
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.toolarium</groupId>
  <artifactId>toolarium-icap-client</artifactId>
  <version>1.0.1.1-JAVA8</version>
  <name>toolarium-icap-client</name>
  <description>Implements an ICAP client compliant with RFC 3507.</description>
  <url>https://github.com/toolarium/toolarium-icap-client</url>
  <properties>
   <maven.compiler.source>8</maven.compiler.source>
   <maven.compiler.target>1.8</maven.compiler.target>
      <java.version>1.8</java.version>
      <maven.compiler.release>8</maven.compiler.release>
 </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

  <licenses>
    <license>
      <name>Apache-2.0 License</name>
      <url>https://raw.githubusercontent.com/toolarium/toolarium-icap-client/master/LICENSE</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <id/>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:https://github.com/tombueng/toolarium-icap-client</connection>
    <developerConnection>scm:git:https://github.com/tombueng/toolarium-icap-client</developerConnection>
    <url>https://github.com/toolarium/toolarium-icap-client</url>
  </scm>
  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.30</version>
    </dependency>
      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
          <version>3.12.0</version>
      </dependency>
	<dependency>
    <groupId>junit</groupId>
    <artifactId>junit</artifactId>
    <version>4.13.2</version>
    <scope>test</scope>

</dependency>
<dependency>
    <groupId>org.junit.jupiter</groupId>
    <artifactId>junit-jupiter-api</artifactId>
    <version>5.8.2</version>
    <scope>test</scope>
</dependency>

  </dependencies>
</project>
